--- a/style/style.css
+++ b/style/style.css
@@ -1,83 +1,117 @@
 /* ------------------------------Nav Bar------------------------------ */
-.head-nav{
-    border: 1px solid black;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    
-    margin-bottom: 3.1rem;
+.head-nav {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5.4rem 0 3.1rem 0;
 }
-.head-ancor{
-    /* border: 1px solid black; */
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 0 34px;
+.head-ancor {
+  /* border: 1px solid black; */
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 0 34px;
 }
-.head-title{
-    /* border: 1px solid black; */
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: var(--primary-color);
-    
+.head-title {
+  /* border: 1px solid black; */
+  font-feature-settings: "clig" off, "liga" off;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--primary-color);
 }
-.head-ancor li a{
-    text-decoration: none;
-    /* margin-right: calc(90rem - 87.875rem); */
-    
-    font-weight: 600;
-    color: var(--primary-color);
+.head-ancor li a {
+  text-decoration: none;
+  /* margin-right: calc(90rem - 87.875rem); */
+
+  font-weight: 600;
+  color: var(--primary-color);
 }
 
 /* ------------------------------Journey Start------------------------------ */
-.journey-start{
-    border: 1px solid black;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+.journey-start {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
-.journey-start .journey-right{
-    border: 1px solid black;
-    background-image: url(../assets/images/Circle_design.svg);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    max-width: 29.6875rem;
+.journey-start .journey-right {
+  /* border: 1px solid black; */
+  background-image: url(../assets/images/Circle_design.svg);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  max-width: 29.6875rem;
+  margin-bottom: 4.3rem;
 }
-.journey-right img{
-    width: 100%;
+.journey-right img {
+  width: 100%;
 }
-.journey-left{
-    border: 1px solid black;
-    display: flex;
-    flex-direction: column;
-    text-align: start;
-    justify-content: space-between;
-    height: 270px;
-    gap: 16px 0;
+.journey-left {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  justify-content: space-between;
+  height: 270px;
+  gap: 16px 0;
 }
-.journey-left .journey-title{
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-size: 3.25rem;
-    font-weight: 700;
-    line-height: 4.375rem;
-    color: var(--primary-color);
-    font-feature-settings: var(--liga-text);
+.journey-left .journey-title {
+  font-feature-settings: "clig" off, "liga" off;
+  font-size: 3.25rem;
+  font-weight: 700;
+  line-height: 4.375rem;
+  color: var(--primary-color);
+  font-feature-settings: var(--liga-text);
 }
-.journey-left .journey-para{
-    font-weight: 600;
-    color: var(--primary-color);
+.journey-left .journey-para {
+  font-weight: 600;
+  color: var(--primary-color);
 }
-.journey-left a{
-    border: 1px solid black;
-    padding: 10px 24px;
-    background-color: #E02C6D;
-    border-radius: 41px;
-    height: 44px;
-    width: 196px;
+.journey-left > button {
+  border: none;
+  background-color: #e02c6d;
+  border-radius: 41px;
+  width: 196px;
+  height: 44px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.journey-left button > span {
+  font-feature-settings: var(--liga-text);
+  color: #fff;
+  font-weight: 700;
+  text-decoration: none;
+}
+.journey-left button > i {
+  color: #fff;
+  margin-left: calc(196px - 190px);
+}
+
+/* ------------------------------Sopnser------------------------------ */
+.sponsor {
+  /* border: 1px solid black; */
+  max-width: 1110px;
+  height: 110px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  border: 1px solid transparent;
+  border-image: linear-gradient(
+    to right,
+    rgba(192, 204, 218, 0.1),
+    rgba(192, 204, 218, 0.6),
+    rgba(192, 204, 218, 0.1)
+  );
+  border-image-slice: 1;
+  margin-bottom: 100px;
 }
